Added new models to better fit the task description from ferweb

--- a/TodoApp/Views/Todo/Completed.cshtml
+++ b/TodoApp/Views/Todo/Completed.cshtml
@@ -1,5 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@model IEnumerable<TodoApp.Models.TodoViewModel>
+@model TodoApp.Models.CompletedViewModel
 @{
     Layout = "~/Pages/_Layout.cshtml";
     ViewData["Title"] = "Completed todos";
