--- a/TodoApp/Views/Todo/Add.cshtml
+++ b/TodoApp/Views/Todo/Add.cshtml
@@ -1,5 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@model TodoApp.Models.TodoViewModel
+@model TodoApp.Models.AddViewModel
 @{
     Layout = "~/Pages/_Layout.cshtml";
     ViewData["Title"] = "Add new todo";
