--- a/TodoApp/Views/Todo/Index.cshtml
+++ b/TodoApp/Views/Todo/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@model IEnumerable<TodoApp.Models.TodoViewModel>
+@model TodoApp.Models.IndexViewModel
 @{
     Layout = "~/Pages/_Layout.cshtml";
     ViewData["Title"] = "Todos";
